Restructure API to have one slack endpoint that will logically determine what other path to route to
